testsuite/tests/linear/should_fail/Linear11.stderr

Linear11.hs:9:23: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from an application
    • In an equation for ‘incorrectUnrestricted’:
          incorrectUnrestricted a = Unrestricted a

Linear11.hs:14:43: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from an application
    • In the pattern: NotUnrestricted a
      In an equation for ‘incorrectUnrestrictedDup’:
          incorrectUnrestrictedDup (NotUnrestricted a) = (a, a)
